--- a/index.html
+++ b/index.html
@@ -400,7 +400,9 @@
 
       <div class="music">
         <div>
-          <img src="./assets/musica.png" alt="" class="music-img" />
+          <p class="music-text">
+            <img src="./assets/logo.png" alt="" class="music-logo" /> Music
+          </p>
           <p class="ar-title">
             Get 6 months <br />
             of Apple Music <br />
@@ -492,133 +494,239 @@
         </div>
       </div>
 
-      <!-- Footer  -->
-      <p class="tv">TV & Home > HomePod (2nd generation)</p>
-      <section class="footer">
-        <div class="footer-row">
-          <div class="footer-col">
-            <h4>Shop and Learn</h4>
-            <ul class="links">
-              <li><a href="#">Store</a></li>
-              <li><a href="#">Mac</a></li>
-              <li><a href="#">iPad</a></li>
-              <li><a href="#">iPhone</a></li>
-              <li><a href="#">Watch</a></li>
-              <li><a href="#">Vision</a></li>
-              <li><a href="#">AirPods</a></li>
-              <li><a href="#">TV & Home</a></li>
-              <li><a href="#">AirTag</a></li>
-              <li><a href="#">Accessories</a></li>
-              <li><a href="#">Gift Cards</a></li>
-            </ul>
-            <h4>Apple Wallet</h4>
-            <ul class="links">
-              <li><a href="#">Wallet</a></li>
-              <li><a href="#">Apple Card</a></li>
-              <li><a href="#">Apple Pay</a></li>
-              <li><a href="#">Apple Cash</a></li>
-            </ul>
+      <div class="footer-sec">
+        <!-- Card  -->
+
+        <div class="others-cards">
+          <div class="other-card">
+            <div class="homePod-card">
+              <img src="./assets/delievery.png" alt="" class="delievery-pic" />
+              <p class="home-title">Fast, free delivery</p>
+              <p>Or pick up available items at an Apple Store.</p>
+              <button class="learn">Learn more ></button>
+              <br />
+            </div>
           </div>
-          <div class="footer-col">
-            <h4>Account</h4>
-            <ul class="links">
-              <li><a href="#">Manage Your Apple ID</a></li>
-              <li><a href="#">Apple Store Account</a></li>
-              <li><a href="#">iCloud.com</a></li>
-            </ul>
-            <h4>Entertainment</h4>
-            <ul class="links">
-              <li><a href="#">Apple One</a></li>
-              <li><a href="#">Apple TV+</a></li>
-              <li><a href="#">Apple Music</a></li>
-              <li><a href="#">Apple Arcade</a></li>
-              <li><a href="#">Apple Fitness+</a></li>
-              <li><a href="#">Apple News+</a></li>
-              <li><a href="#">Apple Podcasts</a></li>
-              <li><a href="#">Apple Books</a></li>
-              <li><a href="#">App Store</a></li>
-            </ul>
-          </div>
-          <div class="footer-col">
-            <h4>Apple Store</h4>
-            <ul class="links">
-              <li><a href="#">Find a Store</a></li>
-              <li><a href="#">Genius Bar</a></li>
-              <li><a href="#">Today at Apple</a></li>
-              <li><a href="#">Group Reservations</a></li>
-              <li><a href="#">Apple Camp</a></li>
-              <li><a href="#">Apple Store App</a></li>
-              <li><a href="#">Certified Refurbished</a></li>
-              <li><a href="#">Apple Trade In</a></li>
-              <li><a href="#">Financing</a></li>
-              <li><a href="#">Carrier Deals at Apple</a></li>
-              <li><a href="#">Order Status</a></li>
-              <li><a href="#">Shopping Help</a></li>
-            </ul>
-          </div>
-          <div class="footer-col">
-            <h4>For Business</h4>
-            <ul class="links">
-              <li><a href="#">Apple and Business</a></li>
-              <li><a href="#">Shop for K-12</a></li>
-            </ul>
-            <h4>For Education</h4>
-            <ul class="links">
-              <li><a href="#">Apple and Education</a></li>
-              <li><a href="#">Shop for Business</a></li>
-              <li><a href="#">Shop for College</a></li>
-            </ul>
-            <h4>For Healthcare</h4>
-            <ul class="links">
-              <li><a href="#">Apple in Healthcare</a></li>
-              <li><a href="#">Health on Apple Watch</a></li>
-              <li><a href="#">Health Records on iPhone</a></li>
-            </ul>
-            <h4>For Government</h4>
-            <ul class="links">
-              <li><a href="#">Shop for Government</a></li>
-              <li><a href="#">Shop for Veterans and Military</a></li>
-            </ul>
-          </div>
-          <div class="footer-col">
-            <h4>Apple Values</h4>
-            <ul class="links">
-              <li><a href="#">Accessibility</a></li>
-              <li><a href="#">Education</a></li>
-              <li><a href="#">Environment</a></li>
-              <li><a href="#">Privacy</a></li>
-              <li><a href="#">Racial Equity and Justice</a></li>
-              <li><a href="#">Supply Chain</a></li>
-            </ul>
-            <h4>About Apple</h4>
-            <ul class="links">
-              <li><a href="#">Newsroom</a></li>
-              <li><a href="#">Apple Leadership</a></li>
-              <li><a href="#">Career Opportunities</a></li>
-              <li><a href="#">Investors</a></li>
-              <li><a href="#">Ethics & Compliance</a></li>
-              <li><a href="#">Events</a></li>
-              <li><a href="#">Contact Apple</a></li>
-            </ul>
+          <div class="other-card">
+            <div class="homePod-card">
+              <img src="./assets/h3.png" alt="" />
+              <p class="home-title">Smart home control. Simplified.</p>
+              <p>
+                Use HomePod to easily control your HomeKit accessories with just
+                your voice.
+              </p>
+              <button class="learn">Learn more ></button>
+              <br />
+            </div>
           </div>
         </div>
-      </section>
 
-      <div class="footer-text">
-        <p>
-          More ways to shop: <a href="#">Find an Apple</a> Store or
-          <a href="#">other retailer</a> near you. Or call 1-800-MY-APPLE.
+        <hr class="nav-hr" />
+        <div class="info">
+          <p>
+            * New subscribers only. $10.99/month after trial. Offer available
+            for a limited time to new subscribers who connect an eligible device
+            to an Apple device running iOS 15 or iPadOS 15 or later. Offer good
+            for 3 months after eligible device pairing. No audio product
+            purchase necessary for current owners of eligible devices. Plan
+            automatically renews until cancelled. Restrictions and other terms
+            apply.
+          </p>
+          <p>
+            1. Spatial Audio works with compatible content in supported apps on
+            HomePod (2nd generation) and HomePod (1st generation). Not all
+            content is available in Dolby Atmos.
+          </p>
+          <p>2. Apple Music requires a subscription.</p>
+          <p>
+            3. Creating a HomePod stereo pair requires two of the same model
+            HomePod speakers, such as two HomePod mini, two HomePod (2nd
+            generation), or two HomePod (1st generation).
+          </p>
+          <p>
+            4. Requires Apple TV 4K running tvOS 17 and later when paired with
+            HomePod (2nd generation).
+          </p>
+          <p>
+            5. Requires multiple HomePod speakers or AirPlay–compatible speakers
+            with the latest AirPlay software.
+          </p>
+          <p>6. Some services may require a subscription.</p>
+          <p>
+            7. Requires a U1‑equipped iPhone running iOS 16.2 or later. Ultra
+            Wideband availability varies by region.
+          </p>
+          <p>
+            8. Find My Friends support requires the user to have Personal
+            Requests enabled and friends and family to share their location in
+            the Find My app on iPhone, iPad, or Apple Watch.
+          </p>
+          <p>
+            9. Available in English (Australia, Canada, United Kingdom, U.S.).
+            This feature is not available on AirPods with the H1 headphone chip
+            and Intel‑based Mac computers. Devices must support and have the
+            latest operating system.
+          </p>
+          <p>
+            10. Temperature and humidity sensing is optimized for indoor,
+            domestic settings, when ambient temperatures are around 15º C to 30º
+            C and relative humidity is around 30% to 70%. Accuracy may decrease
+            in some situations where audio is playing for an extended period of
+            time at high volume levels. HomePod requires some time to calibrate
+            the sensors immediately after starting up before results are
+            displayed.
+          </p>
+          <p>
+            11. Requires a HomeKit- or Matter-enabled accessory. Smart home
+            accessory sold separately.
+          </p>
+          <p>
+            12. Sound Recognition may detect smoke and carbon monoxide alarm
+            sounds and send you notifications when recognized. Sound Recognition
+            should not be relied upon in circumstances where you may be harmed
+            or injured, or in high-risk or emergency situations. Sound
+            Recognition requires the updated Home architecture, which is
+            available as a separate update in the Home app. It requires all
+            Apple devices that access the home to be using the latest software.
+          </p>
+
+          <p>
+            13. Matter accessories require a home hub, such as an Apple TV or
+            HomePod device.
+          </p>
+        </div>
+
+        <!-- Footer  -->
+        <p class="tv">
+          <img src="./assets/logo.png" alt="" class="foot-logo" /> > TV & Home >
+          HomePod (2nd generation)
         </p>
-        <hr class="nav-foot" />
-        <div class="last-foot">
-          <div class="p-foot">
-            <p>Copyright © 2024 Apple Inc. All rights reserved.</p>
-            <p>
-              Privacy Policy | Terms of Use | Sales and Refunds | Legal | Site
-              Map
-            </p>
+        <section class="footer">
+          <div class="footer-row">
+            <div class="footer-col">
+              <h4>Shop and Learn</h4>
+              <ul class="links">
+                <li><a href="#">Store</a></li>
+                <li><a href="#">Mac</a></li>
+                <li><a href="#">iPad</a></li>
+                <li><a href="#">iPhone</a></li>
+                <li><a href="#">Watch</a></li>
+                <li><a href="#">Vision</a></li>
+                <li><a href="#">AirPods</a></li>
+                <li><a href="#">TV & Home</a></li>
+                <li><a href="#">AirTag</a></li>
+                <li><a href="#">Accessories</a></li>
+                <li><a href="#">Gift Cards</a></li>
+              </ul>
+              <h4>Apple Wallet</h4>
+              <ul class="links">
+                <li><a href="#">Wallet</a></li>
+                <li><a href="#">Apple Card</a></li>
+                <li><a href="#">Apple Pay</a></li>
+                <li><a href="#">Apple Cash</a></li>
+              </ul>
+            </div>
+            <div class="footer-col">
+              <h4>Account</h4>
+              <ul class="links">
+                <li><a href="#">Manage Your Apple ID</a></li>
+                <li><a href="#">Apple Store Account</a></li>
+                <li><a href="#">iCloud.com</a></li>
+              </ul>
+              <h4>Entertainment</h4>
+              <ul class="links">
+                <li><a href="#">Apple One</a></li>
+                <li><a href="#">Apple TV+</a></li>
+                <li><a href="#">Apple Music</a></li>
+                <li><a href="#">Apple Arcade</a></li>
+                <li><a href="#">Apple Fitness+</a></li>
+                <li><a href="#">Apple News+</a></li>
+                <li><a href="#">Apple Podcasts</a></li>
+                <li><a href="#">Apple Books</a></li>
+                <li><a href="#">App Store</a></li>
+              </ul>
+            </div>
+            <div class="footer-col">
+              <h4>Apple Store</h4>
+              <ul class="links">
+                <li><a href="#">Find a Store</a></li>
+                <li><a href="#">Genius Bar</a></li>
+                <li><a href="#">Today at Apple</a></li>
+                <li><a href="#">Group Reservations</a></li>
+                <li><a href="#">Apple Camp</a></li>
+                <li><a href="#">Apple Store App</a></li>
+                <li><a href="#">Certified Refurbished</a></li>
+                <li><a href="#">Apple Trade In</a></li>
+                <li><a href="#">Financing</a></li>
+                <li><a href="#">Carrier Deals at Apple</a></li>
+                <li><a href="#">Order Status</a></li>
+                <li><a href="#">Shopping Help</a></li>
+              </ul>
+            </div>
+            <div class="footer-col">
+              <h4>For Business</h4>
+              <ul class="links">
+                <li><a href="#">Apple and Business</a></li>
+                <li><a href="#">Shop for K-12</a></li>
+              </ul>
+              <h4>For Education</h4>
+              <ul class="links">
+                <li><a href="#">Apple and Education</a></li>
+                <li><a href="#">Shop for Business</a></li>
+                <li><a href="#">Shop for College</a></li>
+              </ul>
+              <h4>For Healthcare</h4>
+              <ul class="links">
+                <li><a href="#">Apple in Healthcare</a></li>
+                <li><a href="#">Health on Apple Watch</a></li>
+                <li><a href="#">Health Records on iPhone</a></li>
+              </ul>
+              <h4>For Government</h4>
+              <ul class="links">
+                <li><a href="#">Shop for Government</a></li>
+                <li><a href="#">Shop for Veterans and Military</a></li>
+              </ul>
+            </div>
+            <div class="footer-col">
+              <h4>Apple Values</h4>
+              <ul class="links">
+                <li><a href="#">Accessibility</a></li>
+                <li><a href="#">Education</a></li>
+                <li><a href="#">Environment</a></li>
+                <li><a href="#">Privacy</a></li>
+                <li><a href="#">Racial Equity and Justice</a></li>
+                <li><a href="#">Supply Chain</a></li>
+              </ul>
+              <h4>About Apple</h4>
+              <ul class="links">
+                <li><a href="#">Newsroom</a></li>
+                <li><a href="#">Apple Leadership</a></li>
+                <li><a href="#">Career Opportunities</a></li>
+                <li><a href="#">Investors</a></li>
+                <li><a href="#">Ethics & Compliance</a></li>
+                <li><a href="#">Events</a></li>
+                <li><a href="#">Contact Apple</a></li>
+              </ul>
+            </div>
           </div>
-          <p>United States</p>
+        </section>
+
+        <div class="footer-text">
+          <p>
+            More ways to shop: <a href="#">Find an Apple</a> Store or
+            <a href="#">other retailer</a> near you. Or call 1-800-MY-APPLE.
+          </p>
+          <hr class="nav-foot" />
+          <div class="last-foot">
+            <div class="p-foot">
+              <p>Copyright © 2024 Apple Inc. All rights reserved.</p>
+              <p>
+                Privacy Policy | Terms of Use | Sales and Refunds | Legal | Site
+                Map
+              </p>
+            </div>
+            <p>United States</p>
+          </div>
         </div>
       </div>
     </div>
