--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
       <div class="navbar-title">HomePad</div>
       <div class="navbar-toggle" id="navbar-toggle">&#9776;</div>
       <ul class="navbar-links">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="index.html">Overview</a></li>
+        <li><a href="#">Tech Spaces</a></li>
+        <li><a href="#">Buy</a></li>
       </ul>
     </nav>
     <hr class="nav-hr" />
@@ -517,6 +517,41 @@
               </p>
               <button class="learn">Learn more ></button>
               <br />
+            </div>
+          </div>
+        </div>
+
+        <!-- new cards  -->
+        <div class="accessories">
+          <div class="others-cards">
+            <div class="accessories-card">
+              <div>
+                <p class="accessories-title">Mac Accessories</p>
+                <p>Explore keyboards, mice and other essentials.</p>
+                <button class="learn">Shop Mac accessories ></button
+                ><br /><br />
+                <img
+                  src="./assets/accessories1.jpg"
+                  alt=""
+                  class="accessories-img"
+                />
+                <br />
+              </div>
+            </div>
+            <div class="accessories-card">
+              <div>
+                <p class="accessories-title">Studio Display</p>
+                <p>
+                  The 27-inch Retina display pairs beautifully with any Mac.
+                </p>
+                <button class="learn">Learn more ></button> <br /><br />
+                <img
+                  src="./assets/accessories2.jpg"
+                  alt=""
+                  class="accessories-img"
+                />
+                <br />
+              </div>
             </div>
           </div>
         </div>
