responsive issues fix

--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
         <div>
           <img src="./assets/g1.jpg" alt="" class="ar-img" />
           <img src="./assets/g2.jpg" alt="" class="ar-img" />
-          <img src="./assets/g3.jpg" alt="" class="ar-img" />
+          <!-- <img src="./assets/g3.jpg" alt="" class="ar-img" /> -->
         </div>
       </div>
 
@@ -529,14 +529,14 @@
               <div>
                 <p class="accessories-title">Mac Accessories</p>
                 <p>Explore keyboards, mice and other essentials.</p>
-                <button class="learn">Shop Mac accessories ></button
-                ><br /><br />
+                <br /><br />
                 <img
                   src="./assets/accessories1.jpg"
                   alt=""
                   class="accessories-img"
                 />
                 <br />
+                <button class="learn">Shop Mac accessories ></button>
               </div>
             </div>
             <div class="accessories-card">
@@ -545,13 +545,14 @@
                 <p>
                   The 27-inch Retina display pairs beautifully with any Mac.
                 </p>
-                <button class="learn">Learn more ></button> <br /><br />
+                <br /><br />
                 <img
                   src="./assets/accessories2.jpg"
                   alt=""
                   class="accessories-img"
                 />
                 <br />
+                <button class="learn">Learn more ></button>
               </div>
             </div>
           </div>
