Done - fix issues

--- a/index.html
+++ b/index.html
@@ -21,28 +21,28 @@
     </nav>
     <hr class="nav-hr" />
 
-    <!-- Fullscreen Section -->
-    <div class="fullscreen">
+    <!-- Fullscreen HomePod Section -->
+    <section class="fullscreen">
       <h1 class="zoom-animation">HomePod</h1>
-    </div>
+    </section>
 
     <!-- Features Section -->
-    <div class="features">
+    <section class="features">
       <p class="feature">Immersive, high-fidelity audio.</p>
       <p class="feature">An intelligent assistant.</p>
       <p class="feature">Works seamlessly with your Apple devices.</p>
       <p class="feature">A powerful way to control your smart home.</p>
       <p class="feature">Private and Secure</p>
-    </div>
+    </section>
 
     <!-- Profound sound section  -->
-    <div class="background-section">
+    <section class="background-section">
       <h3>Profound sound.</h3>
       <p>Available in Midnight and White. $299</p>
-    </div>
+    </section>
 
     <!-- High-fidelity audio section -->
-    <div class="high-fidelity-section">
+    <section class="high-fidelity-section">
       <p>High-fidelity audio</p>
       <hr />
       <h2>Amp up everything you hear.</h2>
@@ -53,10 +53,10 @@
         playing — and surrounds you in immersive audio that makes everything you
         listen to sound incredible.
       </p>
-    </div>
+    </section>
 
     <!-- homePod details section  -->
-    <div class="homepod-details-container">
+    <section class="homepod-details-container">
       <div class="homepod-image">
         <img src="./assets/homepod.png" alt="homePod image" />
       </div>
@@ -79,61 +79,67 @@
           the details of the instruments — just as if you were there in person.
         </p>
       </div>
-    </div>
+    </section>
 
-    <!-- Sound all around section  -->
-    <img src="./assets/sound.png" alt="sound" class="sound-bg" />
-    <div>
-      <hr class="nav-hr" />
-      <div class="content-container">
-        <h3>Sound all around</h3>
-        <p>
-          Enjoy a whole new level of spaciousness and layering with HomePod. Its
-          beamforming tweeters precisely beam direct sound, like primary vocals,
-          into the middle of the room, and reflect ambient sound, like the
-          backup band, off the walls — for fully immersive listening. And with
-          Spatial Audio tracks, you’ll experience the sense of being surrounded
-          in music like never before.1
-        </p>
-      </div>
-      <hr class="nav-hr" />
-      <div class="content-container">
-        <h3>Optimizes acoustics in real time.</h3>
-        <p>
-          Apple silicon unlocks advanced computational audio innovations in
-          HomePod. Using feedback from the system sensor, it runs complex tuning
-          models in real time to preserve dynamic range and maximize acoustic
-          performance.
-        </p>
-      </div>
-      <hr class="nav-hr" />
-      <div class="content-container">
-        <h3>Tuned to the room.</h3>
-        <p>
-          With room sensing, HomePod automatically understands its location in a
-          room by using its mics to listen for sound reflections. It tunes sound
-          accordingly, so you’ll enjoy the best listening experience possible no
-          matter where it’s placed.
-        </p>
-      </div>
-    </div>
-
-    <marquee behavior="" direction="">
-      <div class="slider">
-        <div class="flex-container">
-          <img src="./assets/1.jpg" alt="Image 1" />
-          <img src="./assets/2.jpg" alt="Image 2" />
-          <img src="./assets/3.jpg" alt="Image 3" />
-          <img src="./assets/4.jpg" alt="Image 3" />
-          <img src="./assets/5.jpg" alt="Image 3" />
-          <img src="./assets/6.jpg" alt="Image 3" />
-          <img src="./assets/7.jpg" alt="Image 3" />
-          <img src="./assets/8.jpg" alt="Image 3" />
-          <img src="./assets/9.jpg" alt="Image 3" />
-          <img src="./assets/10.jpg" alt="Image 3" />
+    <!-- Sound all around details section  -->
+    <section>
+      <img src="./assets/sound.png" alt="sound" class="sound-bg" />
+      <div>
+        <hr class="nav-hr" />
+        <div class="content-container">
+          <h3>Sound all around</h3>
+          <p>
+            Enjoy a whole new level of spaciousness and layering with HomePod.
+            Its beamforming tweeters precisely beam direct sound, like primary
+            vocals, into the middle of the room, and reflect ambient sound, like
+            the backup band, off the walls — for fully immersive listening. And
+            with Spatial Audio tracks, you’ll experience the sense of being
+            surrounded in music like never before.1
+          </p>
+        </div>
+        <hr class="nav-hr" />
+        <div class="content-container">
+          <h3>Optimizes acoustics in real time.</h3>
+          <p>
+            Apple silicon unlocks advanced computational audio innovations in
+            HomePod. Using feedback from the system sensor, it runs complex
+            tuning models in real time to preserve dynamic range and maximize
+            acoustic performance.
+          </p>
+        </div>
+        <hr class="nav-hr" />
+        <div class="content-container">
+          <h3>Tuned to the room.</h3>
+          <p>
+            With room sensing, HomePod automatically understands its location in
+            a room by using its mics to listen for sound reflections. It tunes
+            sound accordingly, so you’ll enjoy the best listening experience
+            possible no matter where it’s placed.
+          </p>
         </div>
       </div>
-    </marquee>
+    </section>
+
+    <!-- Slider section  -->
+
+    <section>
+      <marquee behavior="" direction="">
+        <div class="slider">
+          <div class="flex-container">
+            <img src="./assets/1.jpg" alt="Image 1" />
+            <img src="./assets/2.jpg" alt="Image 2" />
+            <img src="./assets/3.jpg" alt="Image 3" />
+            <img src="./assets/4.jpg" alt="Image 3" />
+            <img src="./assets/5.jpg" alt="Image 3" />
+            <img src="./assets/6.jpg" alt="Image 3" />
+            <img src="./assets/7.jpg" alt="Image 3" />
+            <img src="./assets/8.jpg" alt="Image 3" />
+            <img src="./assets/9.jpg" alt="Image 3" />
+            <img src="./assets/10.jpg" alt="Image 3" />
+          </div>
+        </div>
+      </marquee>
+    </section>
     <br />
     <br />
     <br />
@@ -149,8 +155,8 @@
       </p>
     </div>
 
-    <!-- dynamic as a duo  -->
-    <div class="apple-background-section apple">
+    <!-- dynamic as a duo bg section  -->
+    <section class="apple-background-section apple">
       <hr class="nav-hr" />
       <div class="content-container">
         <h3>Even more dynamic as a duo.</h3>
@@ -161,10 +167,10 @@
           enveloping audio than that of traditional stereo speakers.
         </p>
       </div>
-    </div>
+    </section>
 
-    <!-- cinematic experience  -->
-    <div>
+    <!-- cinematic experience section -->
+    <section>
       <img src="./assets/shark.jpg" alt="sound" class="shark-bg" />
       <hr class="shark-hr" />
       <div class="content-container">
@@ -188,10 +194,10 @@
           room. With multiroom audio, get ready to rock the whole house.5
         </p>
       </div>
-    </div>
+    </section>
 
-    <!-- image template section  -->
-    <div class="container">
+    <!-- image template products section  -->
+    <section class="container">
       <img src="./assets/i1.png" alt="Image 1" />
       <img src="./assets/i2.png" alt="Image 2" />
       <img src="./assets/i3.png" alt="Image 3" />
@@ -199,7 +205,8 @@
       <img src="./assets/i5.png" alt="Image 3" />
       <img src="./assets/i6.png" alt="Image 3" />
       <img src="./assets/i7.png" alt="Image 3" />
-    </div>
+    </section>
+
     <hr class="shark-hr" />
     <div class="content-container">
       <h3>Turn up the music, podcasts, and calls.</h3>
@@ -212,8 +219,8 @@
       </p>
     </div>
 
-    <!-- All your devices  -->
-    <div class="device-background-section">
+    <!-- All your devices section -->
+    <section class="device-background-section">
       <hr class="nav-hr device" />
       <div class="content-container devices">
         <h3>All your devices in concert.</h3>
@@ -224,10 +231,10 @@
           to easily locate a loved one or your misplaced iPhone with Find My.8
         </p>
       </div>
-    </div>
+    </section>
 
-    <!-- High IQ  -->
-    <div class="high-iq">
+    <!-- High IQ section -->
+    <section class="high-iq">
       <br /><br /><br />
       <img src="./assets/soundChaka.png" alt="sound" class="high-bg" />
       <p class="high-iq-p">High IQ</p>
@@ -240,10 +247,10 @@
         a “Hey Siri” or now just a simple “Siri” away.9 Manage your day and
         control your smart home effortlessly with Siri.
       </p>
-    </div>
+    </section>
 
-    <!-- Siri  -->
-    <div>
+    <!-- Siri section -->
+    <section>
       <div class="siri-container">
         <img src="./assets/watch.png" alt="" />
         <h2><span>Siri,</span> set a pizza timer for 12 minutes</h2>
@@ -270,14 +277,14 @@
         <img src="./assets/home.png" alt="" />
         <h2><span>Hey Siri,</span> lock the front door <sup>11</sup></h2>
       </div>
-    </div>
+    </section>
     <p class="siri-p">
       When you ask Siri something, your request is associated with a random
       identifier, not your Apple ID.
     </p>
 
     <!-- hey siri section  -->
-    <div class="homepod-details-container">
+    <section class="homepod-details-container">
       <div class="homepod-image">
         <img src="./assets/hey-siri.jpg" alt="hey  image" />
       </div>
@@ -288,7 +295,7 @@
           at 7 AM<sup>11</sup>
         </p>
       </div>
-    </div>
+    </section>
     <hr class="nav-hr" />
     <div class="content-container">
       <h3>Hands down, the best way to run the house.</h3>
@@ -302,8 +309,8 @@
       </p>
     </div>
 
-    <!-- cards  -->
-    <div class="card-container">
+    <!-- cards section -->
+    <section class="card-container">
       <div class="card">
         <img src="./assets/temp.png" alt="" />
         <h2>Temperature and humidity</h2>
@@ -358,7 +365,7 @@
           Apple can’t read.
         </p>
       </div>
-    </div>
+    </section>
 
     <div>
       <br /><br /><br />
@@ -378,11 +385,11 @@
 
     <!-- 
       ------------
-      White Background part
+      White Background section
       ------------
       -->
 
-    <div class="white-section">
+    <section class="white-section">
       <div class="ar">
         <div>
           <img src="./assets/circle.png" alt="" class="circle-img" />
@@ -419,9 +426,9 @@
         </div>
       </div>
 
-      <!-- which homePod  -->
+      <!-- which homePod section -->
 
-      <div class="homePod">
+      <section class="homePod">
         <h4>
           Which HomePod <br />
           is right for you?
@@ -493,7 +500,7 @@
             <p>Private and secure</p>
           </div>
         </div>
-      </div>
+      </section>
 
       <div class="footer-sec">
         <!-- Card  -->
@@ -522,8 +529,8 @@
           </div>
         </div>
 
-        <!-- new cards  -->
-        <div class="accessories">
+        <!-- new cards  section-->
+        <section class="accessories">
           <div class="others-cards">
             <div class="accessories-card">
               <div>
@@ -556,7 +563,7 @@
               </div>
             </div>
           </div>
-        </div>
+        </section>
 
         <hr class="nav-hr" />
         <div class="info">
@@ -634,12 +641,13 @@
           </p>
         </div>
 
-        <!-- Footer  -->
+        <!-- Footer section -->
         <p class="tv">
           <img src="./assets/logo.png" alt="" class="foot-logo" /> > TV & Home >
           HomePod (2nd generation)
         </p>
-        <section class="footer">
+
+        <footer class="footer">
           <div class="footer-row">
             <div class="footer-col">
               <h4>Shop and Learn</h4>
@@ -747,27 +755,26 @@
               </ul>
             </div>
           </div>
-        </section>
-
-        <div class="footer-text">
-          <p>
-            More ways to shop: <a href="#">Find an Apple</a> Store or
-            <a href="#">other retailer</a> near you. Or call 1-800-MY-APPLE.
-          </p>
-          <hr class="nav-foot" />
-          <div class="last-foot">
-            <div class="p-foot">
-              <p>Copyright © 2024 Apple Inc. All rights reserved.</p>
-              <p>
-                Privacy Policy | Terms of Use | Sales and Refunds | Legal | Site
-                Map
-              </p>
+          <div class="footer-text">
+            <p>
+              More ways to shop: <a href="#">Find an Apple</a> Store or
+              <a href="#">other retailer</a> near you. Or call 1-800-MY-APPLE.
+            </p>
+            <hr class="nav-foot" />
+            <div class="last-foot">
+              <div class="p-foot">
+                <p>Copyright © 2024 Apple Inc. All rights reserved.</p>
+                <p>
+                  Privacy Policy | Terms of Use | Sales and Refunds | Legal |
+                  Site Map
+                </p>
+              </div>
+              <p>United States</p>
             </div>
-            <p>United States</p>
           </div>
-        </div>
+        </footer>
       </div>
-    </div>
+    </section>
     <script src="scripts/main.js"></script>
   </body>
 </html>
