--- a/index.html
+++ b/index.html
@@ -531,7 +531,7 @@
                 <img
                   src="./assets/accessories1.jpg"
                   alt="accessories1"
-                  class="accessories-img"
+                  class="accessories-img other-img"
                 /><br />
                 <button class="learn">Shop Mac accessories &gt;</button>
               </div>
