--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
           <p class="music-text">
             <img src="./assets/logo.png" alt="logo" class="music-logo" /> Music
           </p>
-          <p class="ar-title">
+          <p class="br-title">
             Get 6 months<br />
             of Apple Music<br />
             free with your<br />
