--- a/index.html
+++ b/index.html
@@ -554,6 +554,44 @@
             </div>
           </div>
         </div>
+        <div class="accessories">
+          <div class="others-cards">
+            <div class="accessories-card">
+              <div>
+                <p class="accessories-title">MagSafe</p>
+                <p>
+                  Snap on a magnetic case, wallet, or both. And get fast,
+                  efficient wireless charging.
+                </p>
+                <button class="learn">Shop MagSafe accessories &gt;</button>
+                <br />
+                <br />
+                <img
+                  src="./assets/magsafe.jpg"
+                  alt="accessories1"
+                  class="accessories-img other-img"
+                /><br />
+              </div>
+            </div>
+            <div class="accessories-card">
+              <div>
+                <p class="accessories-title">AirTag</p>
+                <p class="card-title">
+                  Attach one to your keys. Put another in your backpack. If
+                  they’re misplaced, just use the Find My app.
+                </p>
+                <button class="learn">Buy &gt;</button>
+                <br />
+                <br />
+                <img
+                  src="./assets/airtag.jpg"
+                  alt="accessories2"
+                  class="accessories-img"
+                /><br />
+              </div>
+            </div>
+          </div>
+        </div>
         <hr class="nav-hr" />
         <div class="info">
           <p>
