--- a/index.html
+++ b/index.html
@@ -532,7 +532,7 @@
                 <img
                   src="./assets/accessories1.jpg"
                   alt="accessories1"
-                  class="accessories-img other-img"
+                  class="accessories-img"
                 /><br />
               </div>
             </div>
@@ -569,7 +569,7 @@
                 <img
                   src="./assets/magsafe.jpg"
                   alt="accessories1"
-                  class="accessories-img other-img"
+                  class="accessories-img"
                 /><br />
               </div>
             </div>
