--- a/index.html
+++ b/index.html
@@ -287,9 +287,7 @@
       </div>
       <div class="homepod-text">
         <p class="hey-siri">
-          <span>Hey Siri</span>,<br />
-          open the blinds<br />
-          at 7 AM<sup>11</sup>
+          <span>Hey Siri</span>, open the blinds at 7 AM<sup>11</sup>
         </p>
       </div>
     </div>
@@ -365,10 +363,7 @@
       </div>
     </section>
     <div>
-      <br />
-      <br />
-      <br />
-      <img src="./assets/gets.png" alt="sound" class="high-bg" />
+      <img src="./assets/gets.png" alt="sound" class="siri-bg" />
       <hr class="nav-hr" />
       <div class="content-container">
         <h3>Everyone gets the message.</h3>
@@ -386,7 +381,7 @@
 
     <section class="white-section">
       <div class="ar">
-        <div>
+        <div class="ar-card">
           <img src="./assets/circle.png" alt="circle" class="circle-img" />
           <p class="ar-title">
             Use AR to see<br />
@@ -396,10 +391,12 @@
             Open this page using Safari on your iPhone or iPad.
           </p>
         </div>
-        <div><img src="./assets/mobile.png" alt="mobile" class="ar-img" /></div>
+        <div>
+          <img src="./assets/mobile.png" alt="mobile" class="ar-img mob" />
+        </div>
       </div>
       <div class="music">
-        <div>
+        <div class="music-card">
           <p class="music-text">
             <img src="./assets/logo.png" alt="logo" class="music-logo" /> Music
           </p>
@@ -412,8 +409,8 @@
           <button class="music-details">Learn More &gt;</button>
         </div>
         <div>
-          <img src="./assets/g1.jpg" alt="g1" class="ar-img" />
-          <img src="./assets/g2.jpg" alt="g2" class="ar-img" />
+          <img src="./assets/g1.jpg" alt="g1" class="" />
+          <img src="./assets/g2.jpg" alt="g2" class="" />
         </div>
       </div>
 
