--- a/index.html
+++ b/index.html
@@ -409,8 +409,8 @@
           <button class="music-details">Learn More &gt;</button>
         </div>
         <div>
-          <img src="./assets/g1.jpg" alt="g1" class="" />
-          <img src="./assets/g2.jpg" alt="g2" class="" />
+          <img src="./assets/g1.jpg" alt="g1" class="ar-img" />
+          <img src="./assets/g2.jpg" alt="g2" class="ar-img" />
         </div>
       </div>
 
